Overflow fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -170,7 +170,7 @@ body {
             align-items: center;
 
             width: calc(30vw + 5rem);
-            height: 3rem;
+            min-height: 3rem;
             padding-left: 8px;
 
             font-size: 1.5rem;
@@ -184,6 +184,7 @@ body {
 
             p {
                 display: flex;
+                align-items: center;
                 flex-direction: row;
                 margin: 0;
                 padding: 0;
@@ -196,13 +197,16 @@ body {
                 margin: 0;
                 padding: 0;
                 min-width: 20px;
+                text-decoration-line: none;
             }
         }
         .line {
             // color: blue;
             text-decoration-line: line-through;
-
             button {
+                text-decoration-line: none;
+            }
+            span {
                 text-decoration-line: none;
             }
         }
